@@ -5,8 +5,14 @@ debathena-lightdm-config (1.4) unstable; urgency=low
   * Support basic accessibility options (read: a High Contrast Theme)
   * Drop a separate panel window and actually implement a real menubar on
     the background window for the top "panel"
+  * Display a MOTD on the login screen (Trac: #793)
+  * Add support for a config file
+  * Un-break logo animation, which was broken when the timer callback only
+    conditionally returned True
+  * Deal more gracefully with a missing background image
+  * Move greeter to /usr/lib/debathena-lightdm-config
 
- -- Jonathan Reed <jdreed@mit.edu>  Tue, 10 Jul 2012 17:34:21 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Wed, 11 Jul 2012 16:04:05 -0400
 
 debathena-lightdm-config (1.3) unstable; urgency=low
 
